--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-hey!!
-iam your cat !!
+<div class="slider">
+  <div class="slides">
+    <img src="cat1.jpg" alt="Cat 1">
+    <img src="cat2.jpg" alt="Cat 2">
+    <img src="cat3.jpg" alt="Cat 3">
+  </div>
+  <button class="prev" onclick="slide(-1)">&#10094;</button>
+  <button class="next" onclick="slide(1)">&#10095;</button>
+</div>
